--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -39,6 +39,7 @@
             我的餐廳清單
           </a>
           <a class="navbar-brand" href="/restaurants/new">新增餐廳</a>
+          <a class="navbar-brand" href="/users/login">登入</a>
         </div>
       </nav>
 
