--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -36,10 +36,14 @@
               class="d-inline-block align-top"
               alt="我的餐廳清單"
             />
-            我的餐廳清單
+            {{#if user.name}}{{user.name}}{{else}}我{{/if}}的餐廳清單
           </a>
           <a class="navbar-brand" href="/restaurants/new">新增餐廳</a>
+          {{#if isAuthenticated}}
+          <a class="navbar-brand" href="/users/logout">登出</a>
+          {{else}}
           <a class="navbar-brand" href="/users/login">登入</a>
+          {{/if}}
         </div>
       </nav>
 
