--- a/views/register.hbs
+++ b/views/register.hbs
@@ -3,6 +3,7 @@
     <div class="card card-body shadow register-form">
       <h1 class="text-center mt-3 mb-4">Register</h1>
       <!-- partial message here -->
+      {{> message}}
       <form action="/users/register" method="POST">
         <div class="form-group">
           <label for="name">Name</label>
